--- a/examples/forms/forms.html
+++ b/examples/forms/forms.html
@@ -5,317 +5,308 @@
     <meta name="viewport" content="width = device-width">
     <title>Forms CSS Manual Test</title>
     <link rel="stylesheet" type="text/css" href="../../build/base-min.css">
-
-    <style>
-        body {
-            color: #333;
-            font-size:1.2em;
-        }
-
-    </style>
 </head>
-<body>
+<body class="responsive">
 
-    <div class="content">
+  <div class="container">
+  <h2>Default Form</h2>
 
-    <h2>Default Form</h2>
+  <form class="form">
+  <fieldset>
+   <legend>A default inline form.</legend>
+   <input type="text" placeholder="Email">
+   <input type="password" placeholder="Password">
+   <label>
+   <input type="checkbox"> Remember me
+   </label>
+   <btn type="submit" class="btn">Sign in</btn>
+  </fieldset>
+  </form>
 
-    <form class="form">
+   <h2>Multi-Column Form (with YUI Grids)</h2>
+
+   <p>
+    Multi-column forms such as the one below can be created by pulling down YUI Grids.
+   </p>
+
+   <form class="form form-stacked">
     <fieldset>
-     <legend>A default inline form.</legend>
-     <input type="text" placeholder="Email">
-     <input type="password" placeholder="Password">
-     <label>
-     <input type="checkbox"> Remember me
-     </label>
-     <button type="submit" class="button">Sign in</button>
-    </fieldset>
-    </form>
+    <legend>Legend</legend>
 
-     <h2>Multi-Column Form (with YUI Grids)</h2>
-
-     <p>
-      Multi-column forms such as the one below can be created by pulling down YUI Grids.
-     </p>
-
-     <form class="form form-stacked">
-      <fieldset>
-      <legend>Legend</legend>
-
-      <div class='g-r'>
-       <div class='u-1-3'>
-        <label>First Name</label>
-        <input type="text">
-       </div>
-       <div class='u-1-3'>
-        <label>Password</label>
-        <input type="password">
-       </div>
-       <div class='u-1-3'>
-        <label>E-Mail</label>
-        <input type="email" required>
-       </div>
-
-       <div class='u-1-3'>
-        <label>City</label>
-        <input type="text">
-       </div>
-
-       <div class='u-1-3'>
-        <label>State</label>
-        <select class='input-medium'>
-         <option>AL</option>
-         <option>CA</option>
-         <option>IL</option>
-         <option>MD</option>
-         <option>NY</option>
-        </select>
-       </div>
-      </div>
-      <label class="checkbox">
-       <input type="checkbox"> I've read the terms and conditions
-      </label>
-      <button type="submit" class='button'>Submit</button>
-      <button type="reset" class='button'>Reset</button>
-      </fieldset>
-     </form>
-
-
-    <h2>Stacked Form</h2>
-
-    <p>
-     Apply stacked label styling to any form by applying the <code>form-stacked</code> classname.
-    </p>
-    <form class="form form-stacked">
-     <fieldset>
-     <legend>Legend</legend>
-     <label>First Name</label>
-     <input type="text">
-     <label>Password</label>
-     <input type="password">
-     <label>E-Mail</label>
-     <input type="email" required>
-     <aside class='help-inline'>This is a required field.</aside>
-     <label>City</label>
-     <input type="text">
-     <aside class='form-message'>This is another required field.</aside>
-
-     <label>State</label>
-     <select class='input-medium'>
-      <option>AL</option>
-      <option>CA</option>
-      <option>IL</option>
-      <option>MD</option>
-      <option>NY</option>
-     </select>
-     <label class="checkbox">
-      <input type="checkbox"> I've read the terms and conditions
-     </label>
-     <button type="submit" class='button notice'>Submit</button>
-     <button type="reset" class='button'>Reset</button>
-
-     </fieldset>
-    </form>
-
-     <h2>Aligned Form</h2>
-
-     <p>Aligned forms are great for standard forms that look well-aligned. The labels are right-aligned against the form input controls.</p>
-
-     <form class="form form-aligned">
-      <fieldset>
-      <div class="control-group">
-       <label>Username</label>
-       <input type="text" placeholder="Username">
-       <aside class='form-message-inline'>This is a <code>form-message-inline</code> field.</aside>
-      </div>
-
-      <div class="control-group">
-       <label>Password</label>
-       <input type="password" placeholder="Password">
-       <aside class='help-inline'>This is a <code>help-inline</code> field. Deprecated.</aside>
-      </div>
-
-      <div class="control-group">
-       <label>Email Address</label>
-       <input type="text" placeholder="Email Address">
-      </div>
-      <div class="control-group">
-       <label>Here's a button</label>
-       <input type="button" value="Button" class="button">
-      </div>
-
-      <div class="control-group">
-       <label>Supercalifragilistic Label</label>
-       <input type="text" placeholder="Enter something here...">
-      </div>
-
-      <div class="controls">
-       <label class="checkbox">
-        <input type="checkbox"> Remember Me
-       </label>
-       <button type="submit" class="button">Submit</button>
-      </div>
-      </fieldset>
-     </form>
-
-     <h2>Grouped Inputs</h2>
-
-     <p>Grouped inputs are great for grouping small sets of text-based input elements. They work well for sign-up forms, and look natural on mobile devices.</p>
-
-     <form class="form">
-      <fieldset class='group'>
-       <input type="text" class="input-1-3" placeholder='Username'>
-       <input type="text" class="input-1-3" placeholder='Password'>
-       <input type="text" class="input-1-3" placeholder='Email'>
-      </fieldset>
-      <fieldset class='group'>
-       <input type="text" class="input-1-3" placeholder='Another Group'>
-       <input type="text" class="input-1-3" placeholder='More Stuff'>
-       <button type="submit" class="button input-1-3">Sign in</button>
-      </fieldset>
-     </form>
-
-
-
-
-     <h2>Input Sizing</h2>
-
-     <p>You can take advantage of YUI Grids and the <code>input-block</code> class to create fluid width inputs in practically any size that you want.</p>
-
-     <form class="form">
-       <input class="input-1" type="text" placeholder=".input-1"><br/>
-       <input class="input-2-3" type="text" placeholder=".input-2-3"><br/>
-       <input class="input-1-2" type="text" placeholder=".input-1-2"><br/>
-       <input class="input-1-3" type="text" placeholder=".input-1-3"><br/>
-       <input class="input-1-4" type="text" placeholder=".input-1-4"><br/>
-     </form>
-
-     <div class="g sizing">
-       <form class="form">
-        <div class="u-1-4">
-         <input class="input-1" type="text" placeholder=".u-1-4">
-        </div>
-        <div class="u-3-4">
-         <input class="input-1" type="text" placeholder=".u-3-4">
-        </div>
-
-
-        <div class="u-1-2">
-         <input class="input-1" type="text" placeholder=".u-1-2">
-        </div>
-        <div class="u-1-2">
-         <input class="input-1" type="text" placeholder=".u-1-2">
-        </div>
-
-
-        <div class="u-1-8">
-         <input class="input-1" type="text" placeholder=".u-1-8">
-        </div>
-        <div class="u-1-8">
-         <input class="v" type="text" placeholder=".u-1-8">
-        </div>
-        <div class="u-1-4">
-         <input class="input-1" type="text" placeholder=".u-1-4">
-        </div>
-        <div class="u-1-2">
-         <input class="input-1" type="text" placeholder=".u-1-2">
-        </div>
-
-
-        <div class="u-1-5">
-         <input class="input-1" type="text" placeholder=".u-1-5">
-        </div>
-        <div class="u-2-5">
-         <input class="input-1" type="text" placeholder=".u-2-5">
-        </div>
-        <div class="u-2-5">
-         <input class="input-1" type="text" placeholder=".u-2-5">
-        </div>
-
-        <div class="u-1">
-         <input class="input-1" type="text" placeholder=".u-1">
-        </div>
-       </form>
+    <div class='g-r'>
+     <div class='u-1-3'>
+      <label>First Name</label>
+      <input type="text">
+     </div>
+     <div class='u-1-3'>
+      <label>Password</label>
+      <input type="password">
+     </div>
+     <div class='u-1-3'>
+      <label>E-Mail</label>
+      <input type="email" required>
      </div>
 
-     <h2>Invalid Inputs</h2>
-     <p>Add the required attribute to any form control.</p>
+     <div class='u-1-3'>
+      <label>City</label>
+      <input type="text">
+     </div>
+
+     <div class='u-1-3'>
+      <label>State</label>
+      <select class='input-medium'>
+       <option>AL</option>
+       <option>CA</option>
+       <option>IL</option>
+       <option>MD</option>
+       <option>NY</option>
+      </select>
+     </div>
+    </div>
+    <label class="checkbox">
+     <input type="checkbox"> I've read the terms and conditions
+    </label>
+    <btn type="submit" class='btn'>Submit</btn>
+    <btn type="reset" class='btn'>Reset</btn>
+    </fieldset>
+   </form>
+
+
+  <h2>Stacked Form</h2>
+
+  <p>
+   Apply stacked label styling to any form by applying the <code>form-stacked</code> classname.
+  </p>
+  <form class="form form-stacked">
+   <fieldset>
+   <legend>Legend</legend>
+   <label>First Name</label>
+   <input type="text">
+   <label>Password</label>
+   <input type="password">
+   <label>E-Mail</label>
+   <input type="email" required>
+   <aside class='help-inline'>This is a required field.</aside>
+   <label>City</label>
+   <input type="text">
+   <aside class='form-message'>This is another required field.</aside>
+
+   <label>State</label>
+   <select class='input-medium'>
+    <option>AL</option>
+    <option>CA</option>
+    <option>IL</option>
+    <option>MD</option>
+    <option>NY</option>
+   </select>
+   <label class="checkbox">
+    <input type="checkbox"> I've read the terms and conditions
+   </label>
+   <btn type="submit" class='btn notice'>Submit</btn>
+   <btn type="reset" class='btn'>Reset</btn>
+
+   </fieldset>
+  </form>
+
+   <h2>Aligned Form</h2>
+
+   <p>Aligned forms are great for standard forms that look well-aligned. The labels are right-aligned against the form input controls.</p>
+
+   <form class="form form-aligned">
+    <fieldset>
+    <div class="control-group">
+     <label>Username</label>
+     <input type="text" placeholder="Username">
+     <aside class='form-message-inline'>This is a <code>form-message-inline</code> field.</aside>
+    </div>
+
+    <div class="control-group">
+     <label>Password</label>
+     <input type="password" placeholder="Password">
+     <aside class='help-inline'>This is a <code>help-inline</code> field. Deprecated.</aside>
+    </div>
+
+    <div class="control-group">
+     <label>Email Address</label>
+     <input type="text" placeholder="Email Address">
+    </div>
+    <div class="control-group">
+     <label>Here's a btn</label>
+     <input type="btn" value="btn" class="btn">
+    </div>
+
+    <div class="control-group">
+     <label>Supercalifragilistic Label</label>
+     <input type="text" placeholder="Enter something here...">
+    </div>
+
+    <div class="controls">
+     <label class="checkbox">
+      <input type="checkbox"> Remember Me
+     </label>
+     <btn type="submit" class="btn">Submit</btn>
+    </div>
+    </fieldset>
+   </form>
+
+   <h2>Grouped Inputs</h2>
+
+   <p>Grouped inputs are great for grouping small sets of text-based input elements. They work well for sign-up forms, and look natural on mobile devices.</p>
+
+   <form class="form">
+    <fieldset class='group'>
+     <input type="text" class="input-1-3" placeholder='Username'>
+     <input type="text" class="input-1-3" placeholder='Password'>
+     <input type="text" class="input-1-3" placeholder='Email'>
+    </fieldset>
+    <fieldset class='group'>
+     <input type="text" class="input-1-3" placeholder='Another Group'>
+     <input type="text" class="input-1-3" placeholder='More Stuff'>
+     <btn type="submit" class="btn input-1-3">Sign in</btn>
+    </fieldset>
+   </form>
+
+
+
+
+   <h2>Input Sizing</h2>
+
+   <p>You can take advantage of YUI Grids and the <code>input-block</code> class to create fluid width inputs in practically any size that you want.</p>
+
+   <form class="form">
+     <input class="input-1" type="text" placeholder=".input-1"><br/>
+     <input class="input-2-3" type="text" placeholder=".input-2-3"><br/>
+     <input class="input-1-2" type="text" placeholder=".input-1-2"><br/>
+     <input class="input-1-3" type="text" placeholder=".input-1-3"><br/>
+     <input class="input-1-4" type="text" placeholder=".input-1-4"><br/>
+   </form>
+
+   <div class="g sizing">
      <form class="form">
-       <input type="email" placeholder="Requires an email" required>
+      <div class="u-1-4">
+       <input class="input-1" type="text" placeholder=".u-1-4">
+      </div>
+      <div class="u-3-4">
+       <input class="input-1" type="text" placeholder=".u-3-4">
+      </div>
+
+
+      <div class="u-1-2">
+       <input class="input-1" type="text" placeholder=".u-1-2">
+      </div>
+      <div class="u-1-2">
+       <input class="input-1" type="text" placeholder=".u-1-2">
+      </div>
+
+
+      <div class="u-1-8">
+       <input class="input-1" type="text" placeholder=".u-1-8">
+      </div>
+      <div class="u-1-8">
+       <input class="v" type="text" placeholder=".u-1-8">
+      </div>
+      <div class="u-1-4">
+       <input class="input-1" type="text" placeholder=".u-1-4">
+      </div>
+      <div class="u-1-2">
+       <input class="input-1" type="text" placeholder=".u-1-2">
+      </div>
+
+
+      <div class="u-1-5">
+       <input class="input-1" type="text" placeholder=".u-1-5">
+      </div>
+      <div class="u-2-5">
+       <input class="input-1" type="text" placeholder=".u-2-5">
+      </div>
+      <div class="u-2-5">
+       <input class="input-1" type="text" placeholder=".u-2-5">
+      </div>
+
+      <div class="u-1">
+       <input class="input-1" type="text" placeholder=".u-1">
+      </div>
      </form>
+   </div>
 
-     <h2>Disabled Inputs</h2>
-     <p>Add the disabled attribute to any form control.</p>
-     <form class="form">
-       <input class="input-xlarge" id="disabledInput" type="text" placeholder="Disabled input here..." disabled>
-     </form>
+   <h2>Invalid Inputs</h2>
+   <p>Add the required attribute to any form control.</p>
+   <form class="form">
+     <input type="email" placeholder="Requires an email" required>
+   </form>
 
-     <h2>Rounded Form</h2>
-     <p>Add the input-rounded classname to any form control.</p>
+   <h2>Disabled Inputs</h2>
+   <p>Add the disabled attribute to any form control.</p>
+   <form class="form">
+     <input class="input-xlarge" id="disabledInput" type="text" placeholder="Disabled input here..." disabled>
+   </form>
 
-     <form class="form">
-       <input type="text" class="input-rounded">
-       <button type="submit" class='button'>Search</button>
-     </form>
+   <h2>Rounded Form</h2>
+   <p>Add the input-rounded classname to any form control.</p>
 
-
-     <h2>Selects</h2>
-     <form class="form">
-       <select class='input-medium'>
-        <option>Brazil</option>
-        <option>Canada</option>
-        <option>United States</option>
-        <option>United Kingdom</option>
-        <option>Venezuela</option>
-       </select>
+   <form class="form">
+     <input type="text" class="input-rounded">
+     <btn type="submit" class='btn'>Search</btn>
+   </form>
 
 
-     <select multiple="multiple" class="input-large">
+   <h2>Selects</h2>
+   <form class="form">
+     <select class='input-medium'>
       <option>Brazil</option>
       <option>Canada</option>
       <option>United States</option>
       <option>United Kingdom</option>
       <option>Venezuela</option>
      </select>
-     </form>
 
-     <h2>Checkboxes and Radios</h2>
-     <form class="form">
-       <label class="checkbox">
-        <input type="checkbox" value="">
-        Here's option one.
-       </label>
 
-       <label class="radio">
-        <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked>
-        Here's a radio button. You can choose this one..
-       </label>
-       <label class="radio">
-        <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
-        ..Or this one!
-       </label>
-     </form>
+   <select multiple="multiple" class="input-large">
+    <option>Brazil</option>
+    <option>Canada</option>
+    <option>United States</option>
+    <option>United Kingdom</option>
+    <option>Venezuela</option>
+   </select>
+   </form>
 
-     <h2>Help text</h2>
-     <form class="form form-stacked">
-      <fieldset>
-        <label>Last Name</label>
-        <input type="text" />
-        <aside class="form-message">Block help text</aside>
-      </fieldset>
-     </form>
+   <h2>Checkboxes and Radios</h2>
+   <form class="form">
+     <label class="checkbox">
+      <input type="checkbox" value="">
+      Here's option one.
+     </label>
+
+     <label class="radio">
+      <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked>
+      Here's a radio btn. You can choose this one..
+     </label>
+     <label class="radio">
+      <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
+      ..Or this one!
+     </label>
+   </form>
+
+   <h2>Help text</h2>
+   <form class="form form-stacked">
+    <fieldset>
+      <label>Last Name</label>
+      <input type="text" />
+      <aside class="form-message">Block help text</aside>
+    </fieldset>
+   </form>
+  </div>
+
+  <div class= "g-r">
+    <div class= "u-1">
+      <form class="form">
+        <a class="btn btn-primary">Anchor</a>
+        <btn class="btn btn-primary">btn</btn>
+        <input type="submit" class="btn btn-primary" value="Submit" />
+        <input type="btn" class="btn btn-primary" value="Input btn" />
+        <input type="reset" class="btn btn-primary" value="Reset" />
+      </form>
     </div>
-
-    <div class= "g-r">
-      <div class= "u-1">
-        <form class="form">
-          <a class="button button-primary">Anchor</a>
-          <button class="button button-primary">Button</button>
-          <input type="submit" class="button button-primary" value="Submit" />
-          <input type="button" class="button button-primary" value="Input Button" />
-          <input type="reset" class="button button-primary" value="Reset" />
-        </form>
-      </div>
-    </div>
+  </div>
 </body>
 </html>
